namespace pokeTourney.Model.Interfaces
{
    public interface IMakeNoise
    {
        string MakeNoise();
    }
}